# dbus-sans-io

./: Cargo.toml  Justfile  README.md
src/: auth.rs  blocking_connection.rs  fixed_size_reader.rs  fixed_size_writer.rs  flags.rs  guid.rs  header_field.rs  header_fields.rs  header_reader.rs  io_operation.rs  io_uring_connection.rs  lib.rs  main.rs  message.rs  message_type.rs  poll_connection.rs  serial.rs
src/decoders/: buffer.rs  header.rs  header_fields.rs  message.rs  mod.rs  signature.rs  value.rs
src/encoders/: buffer.rs  header.rs  header_fields.rs  message.rs  mod.rs  signature.rs  value.rs
src/fsm/: auth.rs  connect.rs  fsm_satisfy.rs  fsm_wants.rs  full.rs  mod.rs  read_buffer.rs  reader.rs  reader_writer.rs  writer.rs
src/io_uring_connection/: buffered_reader_fsm.rs  cqe.rs  io_uring_auth_fsm.rs  io_uring_connect_fsm.rs  io_uring_reader_writer_fsm.rs  mod.rs  sqe.rs
src/messages/: add_match.rs  hello.rs  helpers.rs  introspect.rs  mod.rs  name_acquired.rs  properties_changed.rs  request_name.rs  show_notification.rs
src/parsers/: header.rs  header_fields.rs  message.rs  mod.rs  signature.rs  value.rs
src/poll_connection/: mod.rs  non_blocking_stream.rs  poll_auth_fsm.rs  poll_reader_writer_fsm.rs
src/readers/: body.rs  dynamic_size.rs  header.rs  message.rs  mod.rs
src/types/: flags.rs  guid.rs  header.rs  header_field.rs  header_field_name.rs  message.rs  message_signature.rs  message_type.rs  mod.rs  object_path.rs  signature.rs  value.rs
