[package]
name = "dbus-sans-io"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1" }
io-uring = { version = "0.7", optional = true }
libc = { version = "0.2", optional = true }

[features]
blocking = []
poll = ["dep:libc"]
io-uring = ["dep:io-uring", "dep:libc"]

[[bin]]
name = "blocking"
test = false
bench = false
path = "bin/session.rs"
required-features = ["blocking"]

[[bin]]
name = "poll"
test = false
bench = false
path = "bin/session.rs"
required-features = ["poll"]

[[bin]]
name = "io-uring"
test = false
bench = false
path = "bin/session.rs"
required-features = ["io-uring"]
